--- a/templates/about.html
+++ b/templates/about.html
@@ -19,6 +19,8 @@
             {% include "navbar-initial.html" %}
         {% endif %}
 
+        <input id="Mode" type="hidden" value="{{ theme }}">
+
         <section id="AboutMe">
             <p class="about-heading">About</p>
 
@@ -28,8 +30,8 @@
 
             <div class="contact">
                 <a class="bi bi-envelope" href="mailto:tharushadgunawardane@gmail.com"></a>
-                <a class="bi bi-linkedin" href="https://www.linkedin.com/in/tharusha-gunawardane-80a014252/"></a>
-                <a class="bi bi-person" href="https://www.tharusha.com"></a>
+                <a class="bi bi-linkedin" href="https://www.linkedin.com/in/tharusha-gunawardane-80a014252"></a>
+                <a class="bi bi-person" href="https://tharushag-lkb1.onrender.com"></a>
             </div>
         </section>
 
