--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,22 +3,25 @@
 
     <div class="footer-data">
         <div class="credit-link data-margin">
-            <a href="#">Icons made by Pixela</a>
+            <a href="https://www.flaticon.com/free-icons/correct">Correct icons created by kliwir art - Flaticon</a>
         </div>
         <div class="credit-link data-margin">
-            <a href="#">Icons made by Pixela</a>
+            <a href="https://www.freepik.com">Icons made by Freepik from www.flaticon.com</a>
         </div>
         <div class="credit-link data-margin">
-            <a href="#">Icons made by Pixela</a>
+            <a href="https://www.flaticon.com/authors/ilham-fitrotul-hayat">Icons made by Ilham Fitrotul Hayat from www.flaticon.com</a>
         </div>
         <div class="credit-link data-margin">
-            <a href="#">Icons made by Pixela</a>
+            <a href="https://www.flaticon.com/authors/uniconlabs">Icons made by Uniconlabs from www.flaticon.com</a>
         </div>
         <div class="credit-link data-margin">
-            <a href="#">Icons made by Pixela</a>
+            <a href="https://www.flaticon.com/authors/srip">Icons made by srip from www.flaticon.com</a>
         </div>
         <div class="credit-link data-margin">
-            <a href="#">Icons made by Pixela</a>
+            <a href="https://www.flaticon.com/authors/stockio">Icons made by Stockio from www.flaticon.com</a>
+        </div>
+        <div class="credit-link data-margin">
+            <a href="https://www.flaticon.com/authors/smashicons">Icons made by Smashicons from www.flaticon.com</a>
         </div>
     </div>
 </div>
