--- a/static/css/calender.css
+++ b/static/css/calender.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
+
 #Calender {
     padding: 1rem 2rem 3rem;
     position: relative;
@@ -18,11 +20,21 @@
     display: block;
 }
 
+.month-toggle {
+    align-items: center;
+    display: flex;
+    position: absolute;
+    right: 3rem;
+}
+
+.bi {
+    cursor: pointer;
+    font-size: 1.3rem;
+}
+
 .month {
     font-size: 1.5rem;
     font-weight: 700;
-    position: absolute;
-    right: 3rem;
     transition: right 1s;
 }
 
@@ -54,12 +66,25 @@
     border: 3px solid rgb(230, 54, 54);
 }
 
+.yellow {
+    border: 3px solid rgb(238, 223, 87);
+}
+
+.green {
+    border: 3px solid rgb(113, 191, 135);
+}
+
+.blue {
+    background-color: rgb(33, 133, 213) !important;
+    color: rgb(255, 255, 255);
+}
+
 @media (max-width: 900px) {
     #Calender {
         padding: 1rem 0 2rem;
     }
 
-    .month {
+    .month-toggle {
         right: 1rem;
     }
 
@@ -67,7 +92,7 @@
         gap: 1rem;
     }
 
-    .red {
+    .red, .green, .yellow {
         border-width: 2px;
     }
 }
@@ -78,7 +103,7 @@
         gap: .5rem;
     }
 
-    .red {
+    .red, .yellow, .green {
         border-width: 1px;
     }
 
@@ -121,7 +146,6 @@
 
 .event-list {
     height: 10rem;
-    justify-content: center;
     overflow-y: auto;
     padding: 0 1rem;
 }
@@ -129,14 +153,16 @@
 .event-item {
     margin-bottom: .5rem;
     display: flex;
-    justify-content: center;
 }
 
 .event-link {
     color: black;
-    border-bottom: 1px solid black;
     font-size: 1.1rem;
     font-weight: 300;
+}
+
+.event-border {
+    border-bottom: 1px solid black;
 }
 
 @media (max-width: 600px) {
@@ -145,7 +171,9 @@
     }
 
     .event-date {
-        font-size: 1.1rem;
+        top: .5rem;
+        right: .5rem;
+        font-size: .8rem;
     }
 }
 
