--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
         <section id="Info">
             <div class="service-box">
                 <img src="{{ url_for('static', filename='icons/writing.png') }}" class="service-img">
-                <p class="service-text">Write an unlimited <br> amounts of notes</p>
+                <p class="service-text">Create an unlimited <br> amounts of tasks</p>
             </div>
 
             <div class="service-box">
