--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,7 +5,7 @@
 
         <link rel="stylesheet" href="{{ url_for('static', filename='css/dashboard.css') }}">
 
-        {% if current_user.is_authenticated %}
+        {% if current_user.is_authenticated or posts %}
         <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar-loggedin.css') }}">
         {% else %}
         <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar-initial.css') }}">
@@ -14,7 +14,7 @@
         <!--Navbar css-->
     </head>
     <body>
-        {% if current_user.is_authenticated %}
+        {% if current_user.is_authenticated or posts %}
             {% include "navbar-loggedin.html" %}
         {% else %}
             {% include "navbar-initial.html" %}
@@ -45,7 +45,11 @@
                     </li>
                     <li class="side-item cache-link txt" onclick="ShowCacheBox()">Cache</li>
                 </ul>
-                <p class="username">Frank Castle</p>
+                {% if current_user.is_authenticated %}
+                <p class="username">{{ current_user.name }}</p>
+                {% else %}
+                <p class="username">Anonymous</p>
+                {% endif %}
             </div>
 
             {% if posts == 'no_posts' %}
@@ -242,7 +246,7 @@
             <!--Navbar js-->
             <script src="{{ url_for('static', filename='js/navbar.js') }}"></script>
 
-            {% if current_user.is_authenticated %}
+            {% if current_user.is_authenticated or posts %}
             <!--Navbar dropdown js-->
             <script src="{{ url_for('static', filename='js/navbar-loggedin.js') }}"></script>
             {% endif %}
